[project]
name = "hckrnews"
version = "0.1.0"
description = "Command line tool to display HN top stories"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "rich>=14.0.0",
    "textual>=3.2.0",
    "beautifulsoup4>=4.13.4",
    "pytz>=2025.2",
]

[project.scripts]
hckrnews = "hckrnews.app:main"
